# DaFT

./: .gitignore  Banana.ipynb  Blob.ipynb  LICENSE  README.md  index.html  pyproject.toml
daft/: __init__.py  daft.py  ga.py  mmd.py
examples/: Banana.ipynb  Blob.ipynb
script/: input.js  output.js  parameterise.js
styles/: base.css
