[tool.poetry]
name = "daft"
version = "1.0.0"
description = "DerivAtive-Free Thinning"
authors = ["Nikolaos Papadimas <nik@digilab.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
deap = "^1.3.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
